add userMS, securityMS, gatewayMS, and add swagger style in all MS